- Manifold java source viewer -- Open an editor for a any resource file having Manifold support, via menu `View | Show Java Source`, produces a viewer for the corresponding Java source -- Nice to have when developing a type manifold - https://github.com/manifold-systems/manifold/issues/67 -- introduce module-level plugin arg checker - Added plugin icons

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -105,6 +105,10 @@ Bug fixes: <br>
       <action id="Manifold.NewTemplate" class="manifold.ij.actions.CreateManifoldTemplateAction"/>
       <add-to-group group-id="NewGroup1" anchor="last"/>
     </group>
+    <group id="Manifold.SourceCode">
+      <action class="manifold.ij.actions.ViewJavaSourceAction"/>
+      <add-to-group group-id="ViewMenu" anchor="after" relative-to-action="QuickActions"/>
+    </group>
   </actions>
 
   <application-components>
