--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=0.59-alpha
-manifoldVersion=0.59-alpha
+version=0.60-alpha
+manifoldVersion=0.60-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2018.3.4
