--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ String getIjVersion() {
 
 intellij {
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2018.3.4'
+  //alternativeIdePath = 'C:\\Program Files\\Android\\Android Studio'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   plugins = ['com.intellij.lang.jsgraphql:2.1.0'] //include PsiViewer & GraphQL JS in sandbox
