--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -93,13 +93,11 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
   <change-notes>
     <![CDATA[
 Bug fixes and improvements <br>
-- https://github.com/manifold-systems/manifold/issues/87 <br>
--- handle case where a jar file has both a file entry and a directory entry as siblings with the same exact name <br>
-- https://github.com/manifold-systems/manifold/issues/88 <br>
--- extension classes fix <br>
-- https://github.com/manifold-systems/manifold/issues/89 <br>
--- support `graphqls` extension <br>
-- fix NPEs related to recent changes involving manifold plugin dormancy when a project is not using manifold dependencies <br>
+- https://github.com/manifold-systems/manifold/issues/90 <br>
+-- improve encoding of an identifier with all invalid characters <br>
+-- coerce json api create/build parameters to binding values <br>
+- fix JPS compiler plugin bug involving projects without manifold dependencies <br>
+- add Copier/Copy API support for GraphQL types and operations <br>
      ]]>
   </change-notes>
   
