- change license to EULA - configure plugin for marketplace

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.69-alpha
+version=2019.1.0
 manifoldVersion=0.69-alpha
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
