--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -92,9 +92,10 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
 
   <change-notes>
     <![CDATA[
-Big fixes & Early access release preparation<br>
-- Fix some JPMS related issues with multi-module projects
-- Early access release preparation, and preparation for JetBrains Marketplace
+Big fixes & Early access release preparation <br>
+- Fix IJ API related issues with 2017/2018 backward compatibility <br>
+- Fix some JPMS related issues with multi-module projects <br>
+- Early access release preparation, and preparation for JetBrains Marketplace <br>
      ]]>
   </change-notes>
   
