--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -94,9 +94,10 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
 
   <change-notes>
     <![CDATA[
-Big fixes & Early access release preparation<br>
-- Fix some JPMS related issues with multi-module projects
-- Early access release preparation, and preparation for JetBrains Marketplace
+Big fixes & Early access release preparation <br>
+- Fix IJ API related issues with 2017/2018 backward compatibility <br>
+- Fix some JPMS related issues with multi-module projects <br>
+- Early access release preparation, and preparation for JetBrains Marketplace <br>
      ]]>
   </change-notes>
   
@@ -144,7 +145,10 @@ Big fixes & Early access release preparation<br>
                     serviceImplementation="manifold.ij.extensions.ManResolveCache" overrides="true"/>
 
     <!--<library.type implementation="manifold.ij.extensions.ManLibraryType"/>-->
-    <frameworkSupport implementation="manifold.ij.extensions.ManSupportProvider"/>
+
+<!--    disabled indefinitely, inconsistent wrt downloading manifold etc.  -->
+<!--    <frameworkSupport implementation="manifold.ij.extensions.ManSupportProvider"/>-->
+
     <framework.type implementation="manifold.ij.extensions.ManFrameworkType"/>
     <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first, before java"/>
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
