--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2019.1.1-ea
-manifoldVersion=2019.1.0-ea
+version=2019.1.2
+manifoldVersion=2019.1.2
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2018.3.4
