--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-version=2019.1.2
-manifoldVersion=2019.1.2
+version=2019.1.5
+manifoldVersion=2019.1.5
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+//defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2019.1.3
 //defaultIjVersion=2018.3.4
 //defaultIjVersion=2017.3.4
