support String literal fragments

--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -7,6 +7,7 @@ configurations {
 intellij {
   //type = 'JPS'
   version defaultIjVersion // e.g., '2018.2.4'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
+//  plugins ['java']
 }
 
 dependencies {
