--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
-  id 'org.jetbrains.intellij' version '0.4.7'
+  id 'org.jetbrains.intellij' version '0.4.9'
 }
 
 description = 'Manifold :: IJ'
@@ -85,9 +85,10 @@ String getIjVersion() {
 intellij {
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2017.3.4'
   //alternativeIdePath = 'C:\\Program Files\\Android\\Android Studio'
+  //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 192.5281.24'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
-  plugins = ['com.intellij.lang.jsgraphql:2.1.0'] //include PsiViewer & GraphQL JS in sandbox
+  plugins = [/*'java',*/ 'com.intellij.lang.jsgraphql:2.1.0'] //include PsiViewer & GraphQL JS in sandbox
 }
 
 runIde {
