--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2019.1.6
-manifoldVersion=2019.1.5-SNAPSHOT
+version=2019.1.7
+manifoldVersion=2019.1.7
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
 defaultIjVersion=2019.1.3
