--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
   compile group: 'systems.manifold', name: 'manifold-darkj', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-image', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
 
   testCompile group: 'junit', name: 'junit', version: '4.12'
 
