--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -92,6 +92,8 @@ incremental compilation, hotswap debugging, full-featured template editing, and 
   <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
   <idea-version since-build="This value is patched by the build script"/>
 
+  <depends>com.intellij.modules.java</depends>
+
   <product-descriptor code="PMANIFOLD" release-date="20190625" release-version="20191"/>
 
   <change-notes>
