--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,14 @@ intellij {
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 192.5281.24'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
-  plugins = ['java', 'com.intellij.lang.jsgraphql:2.2.0'] //include PsiViewer & GraphQL JS in sandbox
+  if( version.contains( "EAP" ) )
+  {
+    plugins = ['java', 'com.intellij.lang.jsgraphql:2.2.0'] //include PsiViewer & GraphQL JS in sandbox
+  }
+  else
+  {
+    plugins = ['com.intellij.lang.jsgraphql:2.2.0'] //include PsiViewer & GraphQL JS in sandbox
+  }
 }
 
 runIde {
